Add content for Star Fighter - Also installed MDX

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@layouts/*": ["src/layouts/*"],
       "@styles/*": ["src/styles/*"],
       "@images/*": ["src/images/*"],
-      "@content/*": ["src/content/*"]
+      "@content/*": ["src/content/*"],
+      "@assets/*": ["src/assets/*"]
     }
   }
 }
